--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,278 +1,510 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #14091E;
+  background-image: url('/images/background_one.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  scroll-behavior: smooth;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
+#header {
+  height: 10vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
 }
 
-.description p {
+#name {
+  text-align: center;
   position: relative;
+  line-height: 3rem;
+  letter-spacing: 0.1rem;
+}
+
+.image {
   margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 70%
+}
+
+#sub {
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(62, 62, 62);
+  border-radius: 5px;
+  padding: .5rem 1rem;
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  text-align: center;
+  color: black;
+}
+
+#worldimg {
+  filter: invert(100);
+  margin: 0rem 0.5rem;
+}
+
+#location {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  font-weight: lighter;
+  font-size: 16px;
+  line-height: 2rem;
+  letter-spacing: 0.1rem;
+}
+
+#bio {
+  height: 70vh;
+  width: 80vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#bioleft {
+  display: flex;
+  flex-direction: column;
+}
+
+#bioleft > h3 {
+  font-size: 22px;
+  font-weight: 400;
+}
+
+#bioleft > h3 > span {
+  background-color: rgba(0, 204, 255, 0.8);
+  color: black;
+  padding: 0rem 0.5rem;
+
+}
+
+#tech {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+#tech > h4 {
+  font-weight: lighter;
+  margin-right: 1rem;
+  letter-spacing: 0.05rem;
+  font-size: 18px;
+}
+
+#react {
+  filter: saturate(100);
+  margin-right: 1rem;
+}
+
+#next {
+  filter: invert(100) ;
+  margin-right: 1rem;
+}
+
+#js {
+  filter: saturate(2) ;
+  margin-right: 1rem;
+}
+
+#express {
+  margin-right: 1rem;
+}
+
+#vsc {
+  filter: saturate(10);
+  margin-right: 1rem;
+}
+
+#github {
+  filter: invert(100);
+}
+
+#buttons {
+  display: flex;
+  justify-content: center;
+}
+
+#buttons > button {
   padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+  margin: 2rem 2rem;
+  border-radius: 999px;
+  width: 10rem;
+  border: 1px solid white;
+  background-color: transparent;
+  transition: 0.2s;
+  letter-spacing: 0.1rem;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+#buttons > button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+.tooltip {
+  display: none;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+#react:hover ~ #reacttooltip {
+  display: block;
+  font-weight: 100;
+  position: absolute;
+  background-color: rgb(32, 32, 32);
+  border: 1px solid gray;
+  box-shadow: 0px 0px 5px black;
+  border-radius: 0;
+  padding: 0.3rem 0.6rem;
+  font-size: 12px;
+  left: 28%;
+  top: 52%;
 }
 
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
+#next:hover ~ #nexttooltip {
+  display: block;
+  font-weight: 100;
+  position: absolute;
+  background-color: rgb(32, 32, 32);
+  border: 1px solid gray;
+  box-shadow: 0px 0px 5px black;
+  border-radius: 0;
+  padding: 0.3rem 0.6rem;
+  font-size: 12px;
+  left: 29.5%;
+  top: 52%
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
+#js:hover ~ #jstooltip {
+  display: block;
+  font-weight: 100;
+  position: absolute;
+  background-color: rgb(32, 32, 32);
+  border: 1px solid gray;
+  box-shadow: 0px 0px 5px black;
+  border-radius: 0;
+  padding: 0.3rem 0.6rem;
+  font-size: 12px;
+  left: 31%;
+  top: 52%
 }
 
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
+#express:hover ~ #expresstooltip {
+  display: block;
+  font-weight: 100;
+  position: absolute;
+  background-color: rgb(32, 32, 32);
+  border: 1px solid gray;
+  box-shadow: 0px 0px 5px black;
+  border-radius: 0;
+  padding: 0.3rem 0.6rem;
+  font-size: 12px;
+  left: 33.5%;
+  top: 52%
 }
 
-.center {
+#vsc:hover ~ #vsctooltip {
+  display: block;
+  font-weight: 100;
+  position: absolute;
+  background-color: rgb(32, 32, 32);
+  border: 1px solid gray;
+  box-shadow: 0px 0px 5px black;
+  border-radius: 0;
+  padding: 0.3rem 0.6rem;
+  font-size: 12px;
+  left: 34%;
+  top: 52%
+}
+
+#github:hover ~ #githubtooltip {
+  display: block;
+  font-weight: 100;
+  position: absolute;
+  background-color: rgb(32, 32, 32);
+  border: 1px solid gray;
+  box-shadow: 0px 0px 5px black;
+  border-radius: 0;
+  padding: 0.3rem 0.6rem;
+  font-size: 12px;
+  left: 37%;
+  top: 52%
+}
+
+#pfp {
+  border-radius: 9999px;
+}
+
+#break {
+  width: 100%;
+  height: 20vh
+}
+
+#projects {
+  width: 100%;
+  height: 150vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: url('/images/background_two.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+#projectsheader {
+  width: 65%
+}
+
+#projectsheader > h3 {
+  font-weight: 400;
+  letter-spacing: 0.2rem;
+}
+
+#projectcards {
+  width: 57%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#cardOne {
+  width: 100%;
+  height: 30%;
+  border: 1px solid gray;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255, 0.1);
+  backdrop-filter: blur(50px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#cardTwo {
+  width: 100%;
+  height: 30%;
+  border: 1px solid gray;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255, 0.1);
+  backdrop-filter: blur(50px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#cardThree {
+  width: 100%;
+  height: 30%;
+  border: 1px solid gray;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255, 0.1);
+  backdrop-filter: blur(50px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cardTop {
+  width: 95%;
+  height: 30%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1.5rem;
+}
+
+.cardTopLeft {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.cardTopLeftTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cardTopLeftTitle > h3 {
+  font-weight: 500;
+  letter-spacing: 0.1rem;
+  font-size: 0.8vw;
+}
+
+.cardTopLeftTitle > code {
+  font-size: 0.5vw;
+  margin-top: 0.5rem;
+}
+
+.cardTopLeftButton {
   display: flex;
   justify-content: center;
+}
+
+.cardTopLeftButton > button {
+  padding: 0.5rem 1rem;
+  border: 1px solid gray;
+  border-radius: 9999px;
+  background-color: transparent;
+  transition: 0.2s;
+  letter-spacing: 0.1rem;
+}
+
+.cardTopLeftButton > button:hover {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+
+.cardTopRight {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 60%;
+}
+
+.cardDescription > h3 {
+  font-weight: 200;
+  font-size: 1.3vh;
+}
+
+.cardTech > h3 {
+  font-weight: 200;
+  font-size: 1.3vh;
+  color: rgb(201, 201, 201)
+}
+
+.cardTech > h4 {
+  font-weight: 200;
+  font-size: 1.3vh;
+}
+
+.cardBottom {
+  width: 95%;
+  height: 80%;
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+#vinallyone {
+  border-radius: 5px;
+  filter: grayscale(100);
+  transition: 0.5s;
+  width: 46%;
+  height: 72%
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+#vinallytwo {
+  border-radius: 5px;
+  filter: grayscale(100);
+  transition: 0.5s;
+  width: 46%;
+  height: 72%;
 }
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+#vinallyone:hover {
+  filter: grayscale(0)
 }
 
-.logo,
-.thirteen {
-  position: relative;
+#vinallytwo:hover {
+  filter: grayscale(0)
 }
 
-.thirteen {
+.cardHolder {
+  width: 40%;
+  height: 70%;
+  border: 1px solid
+}
+
+#breaktwo {
+  width: 80%;
+  height: 10vh;
+  height: 2px;
+  margin-top: 5vh;
+  background: linear-gradient(to left, #EB2BE3 0%, #4743FF 36.46%, #FF3454 68.23%, #FDB306 100%);
+}
+
+.contact {
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#contactHeader {
+  margin-top: 10vh;
+}
+
+#contactHeader > h1 {
+  letter-spacing: 0.1rem;
+}
+
+#contactmessage {
+  width: 60%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#contactmessage > h3 {
+  font-weight: 300;
+}
+
+#contactmessage > code {
+  font-size: 18px;
+  text-decoration: underline;
+}
+
+#contactmessage > code:hover {
+  cursor: pointer;
+}
+
+.footer {
+  color: #52346f;
+}
+
+#social {
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
 }
 
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
+#linkedin {
+  border-radius: 5px;
 }
 
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
+#github {
+  scale: 1.2
 }
 
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
+.socialimages {
+  height: auto;
+  width: 10%;
+  transition: 0.2s;
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+#linkedin:hover {
+  scale: 1.2;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
+#github:hover {
+  scale: 1.4;
+  cursor: pointer;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
 
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
 
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
