--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 :root {
+  color: white;
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -86,7 +87,8 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: white;
+  font-family: sans-serif;
   background: linear-gradient(
       to bottom,
       transparent,
